--- a/appspec.template.json
+++ b/appspec.template.json
@@ -7,7 +7,7 @@
         "Properties": {
           "TaskDefinition": "<TASK_DEFINITION>",
           "LoadBalancerInfo": {
-            "ContainerName": "nginx",
+            "ContainerName": "{{CONTAINER_NAME}}",
             "ContainerPort": 80
           }
         }
