--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -197,6 +197,12 @@ jobs:
     if: always()
 
     steps:
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{ env.AWS_ACCOUNT_ID }}:role/${{ secrets.AWS_ROLE_NAME }}
+          aws-region: ${{ env.AWS_REGION }}
+
       - name: Get deployment ID
         id: get-deployment-id
         run: |
