--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -230,34 +230,60 @@ jobs:
              [ "${{ needs.build-and-push-image.result }}" == "success" ] && \
              [ "${{ needs.render-task-definition-and-deploy.result }}" == "success" ] && \
              [ "${{ job.status }}" == "success" ]; then
-            echo "workflow_status=:tada: success" >> $GITHUB_OUTPUT
-            echo workflow_status: success
+            echo "conclusion=success" >> $GITHUB_ENV
           else
-            echo "workflow_status=:collision: failure" >> $GITHUB_OUTPUT
-            echo workflow_status: failure
+            echo "conclusion=failure" >> $GITHUB_ENV
           fi
 
-      - name: Notify Slack
-        if: always()
+      - name: Notify Slack on Success
+        if: steps.get-workflow-conclusion.outputs.conclusion == 'success'
         uses: slackapi/slack-github-action@v1.26.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
           payload: |
             {
-              "text": "ビルド結果: ${{ steps.get-workflow-conclusion.outputs.workflow_status }}\n\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "ビルド結果: :tada: 成功しました！\n${{ github.event.pull_request.html_url }}",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "ビルド結果: ${{ steps.get-workflow-conclusion.outputs.workflow_status }}\n\n<${{ github.event.pull_request.html_url || github.event.head_commit.url }}|Commit内容>"
+                    "text": "ビルド結果: :tada: 成功しました！\n<${{ github.event.pull_request.html_url }}|Pull Request>"
                   }
                 },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "デプロイに問題がない場合、CodeBuildで「元のタスクセットの終了」を実行してください。\n\n<https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.render-task-definition-and-deploy.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}|CodeDeployの最新デプロイ>"
+                    "text": "デプロイに問題がない場合、CodeBuildで「元のタスクセットの終了」を実行してください。\n<https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.render-task-definition-and-deploy.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}|CodeDeployの最新デプロイ>"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+  
+      - name: Notify Slack on Failure
+        if: steps.get-workflow-conclusion.outputs.conclusion == 'failure'
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          payload: |
+            {
+              "text": "ビルド結果: :collision: 失敗しました。\n${{ github.event.pull_request.html_url }}",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "ビルド結果: :collision: 失敗しました。\n<${{ github.event.pull_request.html_url }}|Pull Request>"
+                  }
+                },
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "デプロイに問題が発生しました。詳細を確認してください。\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|GitHub Actions>"
                   }
                 }
               ]
