--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -236,7 +236,7 @@ jobs:
           fi
 
       - name: Notify Slack on Success
-        if: steps.get-workflow-conclusion.outputs.conclusion == 'success'
+        if: always() && steps.get-workflow-conclusion.outputs.conclusion == 'success'
         uses: slackapi/slack-github-action@v1.26.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
@@ -264,7 +264,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
   
       - name: Notify Slack on Failure
-        if: steps.get-workflow-conclusion.outputs.conclusion == 'failure'
+        if: always() && steps.get-workflow-conclusion.outputs.conclusion == 'failure'
         uses: slackapi/slack-github-action@v1.26.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
