workflowの成功不成功による条件分岐の不具合修正

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -230,60 +230,36 @@ jobs:
              [ "${{ needs.build-and-push-image.result }}" == "success" ] && \
              [ "${{ needs.render-task-definition-and-deploy.result }}" == "success" ] && \
              [ "${{ job.status }}" == "success" ]; then
-            echo "conclusion=success" >> $GITHUB_ENV
+            echo "conclusion=success"
+            echo "message1=:tada: 成功しました" >> $GITHUB_OUTPUT
+            echo "message2=デプロイに問題がない場合、CodeBuildで「元のタスクセットの終了」を実行してください。\n<https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.render-task-definition-and-deploy.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}|CodeDeploy>" >> $GITHUB_OUTPUT
           else
-            echo "conclusion=failure" >> $GITHUB_ENV
+            echo "conclusion=failure"
+            echo "message1=:collision: 失敗しました" >> $GITHUB_OUTPUT
+            echo "message2=デプロイに問題が発生しました。詳細を確認してください。\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|GitHub Actions>" >> $GITHUB_OUTPUT
           fi
 
-      - name: Notify Slack on Success
-        if: always() && steps.get-workflow-conclusion.outputs.conclusion == 'success'
+      - name: Notify Slack
+        if: always()
         uses: slackapi/slack-github-action@v1.26.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
           payload: |
             {
-              "text": "ビルド結果: :tada: 成功しました！\n${{ github.event.pull_request.html_url }}",
+              "text": "ビルド結果: ${{ steps.get-workflow-conclusion.outputs.message1 }}\n${{ github.event.pull_request.html_url }}",
               "blocks": [
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "ビルド結果: :tada: 成功しました！\n<${{ github.event.pull_request.html_url }}|Pull Request>"
+                    "text": "ビルド結果: ${{ steps.get-workflow-conclusion.outputs.message1 }}\n<${{ github.event.pull_request.html_url }}|Pull Request>"
                   }
                 },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "デプロイに問題がない場合、CodeBuildで「元のタスクセットの終了」を実行してください。\n<https://console.aws.amazon.com/codesuite/codedeploy/deployments/${{ needs.render-task-definition-and-deploy.outputs.codedeploy-deployment-id }}?region=${{ env.AWS_REGION }}|CodeDeployの最新デプロイ>"
-                  }
-                }
-              ]
-            }
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
-  
-      - name: Notify Slack on Failure
-        if: always() && steps.get-workflow-conclusion.outputs.conclusion == 'failure'
-        uses: slackapi/slack-github-action@v1.26.0
-        with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          payload: |
-            {
-              "text": "ビルド結果: :collision: 失敗しました。\n${{ github.event.pull_request.html_url }}",
-              "blocks": [
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "ビルド結果: :collision: 失敗しました。\n<${{ github.event.pull_request.html_url }}|Pull Request>"
-                  }
-                },
-                {
-                  "type": "section",
-                  "text": {
-                    "type": "mrkdwn",
-                    "text": "デプロイに問題が発生しました。詳細を確認してください。\n<https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}|GitHub Actions>"
+                    "text": "${{ steps.get-workflow-conclusion.outputs.message2 }}"
                   }
                 }
               ]
