生成したtagを取得できない不具合を修正

--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -142,6 +142,7 @@ jobs:
 
   render-task-definition-and-deploy:
     needs:
+      - build-tag
       - build-and-push-image
 
     runs-on: ubuntu-latest
