--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,6 +56,7 @@ jobs:
         env:
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
+          POSTGRES_INITDB_ARGS: --encoding=UTF-8 --locale=C
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 10
 
     steps:
@@ -64,7 +65,7 @@ jobs:
           psql -h ${{ env.POSTGRES_HOST }} -U ${{ env.POSTGRES_USER }} -c "CREATE DATABASE ${{ env.POSTGRES_DB }}_test WITH TEMPLATE template0 ENCODING 'UTF8' LC_COLLATE 'C' LC_CTYPE 'C'"
         env:
           PGPASSWORD: ${{ env.POSTGRES_PASSWORD }}
-    
+
       - name: Check out code
         uses: actions/checkout@v3
 
