--- a/compose.yaml
+++ b/compose.yaml
@@ -5,6 +5,8 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: password
+      POSTGRES_INITDB_ARGS: --encoding=UTF-8 --locale=C
+      TZ: Asia/Tokyo
     ports:
       - "5432:5432"
     volumes:
