--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -104,4 +104,4 @@ jobs:
         run: bundle exec rake parallel:setup --trace
 
       - name: Run RSpec
-        run: bundle exec parallel_rspec
+        run: bundle exec rake parallel:spec
