- ECRのリポジトリ名変更対応 - 若干リファクタリング

--- a/.github/templates/appspec.template.json
+++ b/.github/templates/appspec.template.json
@@ -7,7 +7,7 @@
         "Properties": {
           "TaskDefinition": "<TASK_DEFINITION>",
           "LoadBalancerInfo": {
-            "ContainerName": "{{CONTAINER_NAME}}",
+            "ContainerName": "{{LB_INFO_CONTAINER_NAME}}",
             "ContainerPort": 80
           }
         }
