--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -74,7 +74,7 @@ jobs:
         uses: ruby/setup-ruby@v1
         with:
           ruby-version: .ruby-version
-          bundler-cache: true
+          bundler-cache: true # actions/cacheよりもこちらのオプションを利用します。 https://github.com/ruby/setup-ruby/tree/v1/?tab=readme-ov-file#caching-bundle-install-manually
 
 #      - name: Setup Node
 #        uses: actions/setup-node@v3
